--- a/css/style.css
+++ b/css/style.css
@@ -1,46 +1,57 @@
 body{
   font-family: YuGothic;
+  height: 100%;
+  max-width: 100%;
 }
 
-.container{
-  width: 320px;
+
+
+.head{
+  font-weight: bold;
+  margin:0 auto;
+  padding: 0 15px 0 15px;
+}
+
+.contents-wrapper{
+  width: 460px;
   max-width: 100%;
   margin: 0 auto;
+  /* padding: 0 15px 0 15px; */
+
 }
 
 .left {
-display: flex;
 color: #1F91BE;
 font-size: 18px;
 margin-top: 20px;
 }
 
-nav ul{
+.nav ul{
 display: flex;
 }
 
-nav li{
+.nav li{
   font-size: 14px;
+  /* width: 50px; */
+  /* height: 14px; */
+  font-weight: bold;
   padding: 10px 12px 0 0;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
-nav a{
+.nav a{
   color: #333333;
   text-decoration: none;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 
-nav a:hover{
+.nav a:hover{
   color: #1F91BE;}
-
-.top-img img{
-width: 100%;
-}
 
 
 h1 {
 font-size: 22px;
+font-weight: bold;
 color: #1F91BE;
 border-bottom: 4px solid #1F91BE;
 width: 100%;
@@ -48,34 +59,48 @@ margin-top: 40px;
 padding-bottom: 6px;
 }
 
+h1.news{
+  margin-top: 60px;
+}
 
 
 h2{
 font-size: 22px;
+font-weight: bold;
 color: #1F91BE;
 border-bottom: 4px solid #1F91BE;
 width: 100%;
 padding-bottom: 6px;
-margin-top:60px;
+margin-top:58px;
 margin-bottom: 20px;
 }
 
+/* top */
+.top{
+  width: 100%;
+  height: 100%;
+}
 
 
-/* about */
+/* article-wrapper */
+
+.article-wrapper{
+    padding: 0 15px 0 15px;
+}
 
 img.about1{
   margin-top: 20px;
+  width: 100%;
 }
 
 img.about2{
   margin-top: 20px;
+  width: 100%;
 }
 
 p.tx{
   margin-top: 20px;
-  margin-bottom: 40px;
-}
+  margin-bottom: 40px;}
 
 
 /* news */
@@ -99,47 +124,64 @@ font-size: 14px;
 flex-basis:570px;
 }
 
+
 .btn{
-letter-spacing: 0;
 color: #1F91BE;
-width: 148px;
-font-size:14px;
+width: 70px;
+line-height: 14px;
+font-size:13px;
 font-weight:bold;
 text-decoration:none;
 display:block;
+float: none;
 text-align:center;
-padding: 8px 34px 8px 34px;
+padding: 13px 39px 13px 39px;
 margin: 20px auto 40px auto;
 background-color:#FFFFFF;
 border:2px solid #1F91BE;
 }
 
-/* side */
+
+
+/* side-wrapper */
+
+.category{
+  padding: 0 15px 0 15px;
+  font-weight: bold;
+
+}
+
+.picture-area{
+  display: flex;
+}
+
+.picture-area {
+text-align: center;
+padding: 0 22px 0 22px;
+}
 
 img.imgside{
   margin-top: 20px;
+  width: 100%;
 }
 
 
-.sidebar p{
-  text-align: center;
-}
-
-.sidebar ul{
+.category ul{
   list-style:disc inside;
 }
 
-.sidebar li{
+.category li{
   padding-left: 2px;
   margin-top: 13px;
+  font-size: 14px;
 }
 
 /* footer */
 
-footer {
+footer{
 margin-top: 60px;
 width: 100%;
-height: 50px;
+height: 100%;
 background-color: #C7C7C7;
 }
 
@@ -147,8 +189,6 @@ footer p {
 padding: 18px 0 18px 0;
 text-align: center;
 font: Bold 10px YuGothic;
-letter-spacing: 0;
 color: #FFFFFF;
-opacity: 1
 
 }
