--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,70 +1,53 @@
-@media (min-width: 1080px) and (max-width:2280px){
 
-.container{
-width: 1080px;
+@media (min-width: 760px){
+
+.head{
+display: flex;
+justify-content: center;
+width: auto;
+}
+
+.contents-wrapper{
 margin: 0 auto;
 max-width: 100%;
+display: flex;
+width: 1080px;
 }
 
-.main{
-  display: flex;
-  margin: 0 auto;
-  width: 1080px;
-  max-width: 100%;
-}
-
-/* common */
-
-h1{
-font-size: 32px;
-color: #1F91BE;
-border-bottom: 4px solid #1F91BE;
-width: 700px;
-margin-right: 20px;
-}
-
-h2 {
-font-size: 24px;
-color: #1F91BE;
-border-bottom: 4px solid #1F91BE;
-width: 300px;
-}
-
-/*header部分*/
 
 .left {
-float: left;
 color: #1F91BE;
 font-size: 31px;
-text-align:left;
+margin: auto auto auto 0;
 }
 
-nav{
-float: right;
-/* display: flex; */
-font-size: 17px;
+.nav ul{
+align-items: center;
+margin: 15px 0 15px auto;
+padding: 0 0 0 0;
 }
-nav li{
+
+.nav li{
 font: Bold 16px YuGothic;
 color: #333333;
-opacity: 1;
-padding-top: 30px;
+/* padding-top: 30px; */
 display: inline;
+padding-left: 34px;
+margin: 0;
 }
-nav a{
-color: #333333;
-text-decoration: none;
-}
-nav a:hover{
-color: #1F91BE;}
 
+.article-wrapper{
+  margin: 60px 0 auto 0;
+  padding-right: 58px;
+  width: 70%;
+}
 
 .about-flex{
 display: flex;
 }
 
 .tx{
-width:320px;
+font-size: 16px;
 }
 
 p.tx{
@@ -75,9 +58,203 @@ p.tx{
   margin-right: 80px;
 }
 
-.about1{
-padding-right: 60px;
+img.about1{
+  margin-top: 20px;
 }
+
+img.about2{
+  margin-top: 20px;
+}
+
+
+.about-container-left{
+  width: 100%;
+  padding-right: 60px;
+}
+
+.about-container-right{
+  width: 100%;
+}
+
+
+
+/*NEWS部分*/
+
+.calender{
+display: flex;
+border-bottom: 1px solid #6F6F6F;
+width: 100%;
+padding-bottom: 0;
+}
+
+p.day{
+font-weight: bold;
+font-size: 11px;
+margin-top: auto;
+margin:20px 20px 20px 0;
+}
+
+.newstxt{
+font-size: 14px;
+flex-basis:100%;
+margin: auto;
+}
+
+
+
+.btn{
+float:right;
+letter-spacing: 0;
+color: #1F91BE;
+width: 80px;
+font-size:16px;
+line-height: 16px;
+font-weight:bold;
+text-decoration:none;
+display:block;
+text-align:center;
+margin-top: 20px;
+padding: 7px 34px 7px 34px;
+background-color:#FFFFFF;
+border:2px solid #1F91BE;
+}
+
+.side-wrapper{
+  width:30%;
+  margin: 0 auto;
+  margin-top: 70px;
+}
+
+img.imgside{
+  margin-top: 30px;
+}
+
+
+
+.category li{
+  font-size: 16px;
+  height: 16px;
+  margin-bottom: 15px;
+  margin-left: 6px;
+}
+
+}
+
+@media (min-width:1080px)
+{
+
+.contents-wrapper{
+width: 1080px;
+margin: 0 auto;
+max-width: 100%;
+display: flex;
+}
+
+/* common */
+
+h1{
+font-size: 32px;
+color: #1F91BE;
+border-bottom: 4px solid #1F91BE;
+width: 100%;
+margin-right: 20px;
+padding-bottom: 9px;
+margin-bottom: 10px;
+}
+
+h2 {
+font-size: 24px;
+color: #1F91BE;
+border-bottom: 4px solid #1F91BE;
+width: 300px;
+padding-bottom: 9px;
+margin-top: 40px;
+margin-bottom: 40px;
+}
+
+/*header部分*/
+
+.head{
+display: flex;
+justify-content: center;
+width: 1080px;
+margin: auto;
+}
+
+.left {
+color: #1F91BE;
+font-size: 31px;
+margin: auto auto auto 0;
+}
+
+.nav ul{
+align-items: center;
+margin: 15px 0 15px auto;
+}
+
+.nav li{
+font: Bold 16px YuGothic;
+color: #333333;
+/* padding-top: 30px; */
+display: inline;
+padding-left: 34px;
+margin: 0;
+}
+
+.nav a{
+color: #333333;
+text-decoration: none;
+}
+.nav a:hover{
+color: #1F91BE;}
+
+
+/* article-wrapper */
+  
+.article-wrapper{
+  width: 70%;
+  margin-top: 60px;
+  padding-right: 58px;
+  padding-left: 0;
+  margin-bottom: auto;
+
+}
+
+.about-flex{
+display: flex;
+}
+
+.tx{
+width:320px;
+font-size: 16px;
+}
+
+p.tx{
+  margin-top: 30px;
+}
+
+.about{
+  margin-right: 80px;
+}
+
+img.about1{
+  margin-top: 20px;
+}
+
+img.about2{
+  margin-top: 20px;
+}
+
+
+.about-container-left{
+  width: 320px;
+  padding-right: 60px;
+}
+
+.about-container-right{
+  width: 320px;
+}
+
 
 
 /*NEWS部分*/
@@ -89,34 +266,69 @@ width: 700px;
 padding-bottom: 0;
 }
 
+p.day{
+font-weight: bold;
+font-size: 14px;
+line-height: 14px;
+display: flex;
+margin:20px 0 20px 0;
+}
+
 .newstxt{
 font-size: 14px;
-flex-basis:560px;
-margin: auto;
+line-height: 14px;
+flex-basis:555px;
+margin: 20px 0 20px 40px;
+display: inline;
+}
+
+p.day2{
+font-size: 14px;
+margin:20px 0 20px 0;
+
+}
+
+.newstxt2{
+font-size: 14px;
+flex-basis:555px;
+margin: 20px 0 20px 40px;
 }
 
 .btn{
+float:right;
 letter-spacing: 0;
 color: #1F91BE;
-width: 148px;
+width: 80px;
 font-size:16px;
+line-height: 16px;
 font-weight:bold;
 text-decoration:none;
 display:block;
 text-align:center;
-margin:20px auto auto 480px;
-padding: 8px 34px 8px 34px;
+margin-top: 20px;
+padding: 7px 34px 7px 34px;
 background-color:#FFFFFF;
-border:1px solid #1F91BE;
+border:2px solid #1F91BE;
 }
 
-.sidebar{
-  width: 300px;
+.side-wrapper{
+  width: 30%;
   margin: 0 auto;
+  margin-top: 70px;
+  margin-right: 100px;
 }
 
 img.imgside{
   margin-top: 30px;
+}
+
+
+
+.category li{
+  font-size: 16px;
+  height: 16px;
+  margin-bottom: 15px;
+  margin-left: 6px;
 }
 
 /*footer部分 済*/
@@ -124,7 +336,7 @@ img.imgside{
 footer {
 margin-top: 60px;
 width: 100%;
-height: 50px;
+height: 100%;
 background-color: #C7C7C7;
 }
 
