--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,72 +1,73 @@
 
 @media (min-width: 760px){
 
+
+/* ヘッダー部分 */
 .head{
 display: flex;
-justify-content: center;
-width: auto;
-}
-
-.contents-wrapper{
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+/* float: left; */
+height: 75px;
+padding:0 15px;
 margin: 0 auto;
-max-width: 100%;
-display: flex;
-width: 1080px;
 }
-
 
 .left {
 color: #1F91BE;
 font-size: 31px;
-margin: auto auto auto 0;
 }
 
 .nav ul{
 align-items: center;
-margin: 15px 0 15px auto;
-padding: 0 0 0 0;
 }
 
 .nav li{
 font: Bold 16px YuGothic;
 color: #333333;
-/* padding-top: 30px; */
 display: inline;
+padding: 0;
 padding-left: 34px;
 margin: 0;
 }
 
+/* /ヘッダー部分 */
+
+/* 全体部分 */
+.contents-wrapper{
+display: flex;
+padding:100px 15px;
+margin: 0 auto;
+width: auto;
+}
+
+/* /全体部分 */
+
+/* ABOUT部分 */
 .article-wrapper{
-  margin: 60px 0 auto 0;
-  padding-right: 58px;
   width: 70%;
+  padding-right: 80px;
 }
 
 .about-flex{
 display: flex;
 }
-
 .tx{
 font-size: 16px;
 }
-
 p.tx{
-  margin-top: 30px;
+  padding-top: 30px;
 }
-
 .about{
   margin-right: 80px;
 }
-
 img.about1{
-  margin-top: 20px;
+  padding-top: 30px;
 }
-
 img.about2{
-  margin-top: 20px;
+  padding-top: 30px;
 }
-
-
 .about-container-left{
   width: 100%;
   padding-right: 60px;
@@ -76,6 +77,7 @@ img.about2{
   width: 100%;
 }
 
+/* /ABOUT部分 */
 
 
 /*NEWS部分*/
@@ -85,22 +87,42 @@ display: flex;
 border-bottom: 1px solid #6F6F6F;
 width: 100%;
 padding-bottom: 0;
+justify-content: space-evenly
 }
 
 p.day{
 font-weight: bold;
-font-size: 11px;
-margin-top: auto;
-margin:20px 20px 20px 0;
+font-size: 14px;
+align-items: center;
+justify-content: flex-start;
+margin:0;
+padding: 20px 0 20px 0;
+line-height: 1.8;
+white-space: nowrap;
 }
 
 .newstxt{
+align-items: center;
 font-size: 14px;
 flex-basis:100%;
-margin: auto;
+margin:  0;
+padding: 20px 0 20px 49px;
+
+}
+
+p.day2{
+  line-height: 1.8;
+
+}
+
+.newstxt2{
+font-size: 14px;
+flex-basis:100%;
+margin-bottom: 7px;
 }
 
 
+/* ボタン部分 */
 
 .btn{
 float:right;
@@ -119,36 +141,67 @@ background-color:#FFFFFF;
 border:2px solid #1F91BE;
 }
 
+/* ボタン部分*/
+
+
+/* サイドバー部分 */
+
 .side-wrapper{
-  width:30%;
-  margin: 0 auto;
-  margin-top: 70px;
+width:30%;
+margin: 0 auto;
+padding: 0;
 }
 
 img.imgside{
-  margin-top: 30px;
+  padding-top: 30px;
 }
 
+.picture-area{
+  padding: 0;
+}
 
+h2 {
+font-size: 24px;
+color: #1F91BE;
+border-bottom: 4px solid #1F91BE;
+width: 100%;
+padding-bottom: 9px;
+margin: 0 0 0 0;
+}
 
+.category{
+  padding: 0;
+}
 .category li{
   font-size: 16px;
   height: 16px;
-  margin-bottom: 15px;
-  margin-left: 6px;
+}
+/* サイドバー部分 */
+
+
+/* フッター部分 */
+footer {
+width: 100%;
+height: 100%;
+background-color: #C7C7C7;
+margin-top: 0;
 }
 
+footer p {
+padding: 18px 0 18px 0;
+font: Bold 12px YuGothic;
+letter-spacing: 0;
+color: #FFFFFF;
+opacity: 1
 }
+/* /フッター部分 */
+}
+
+
+
 
 @media (min-width:1080px)
 {
-
-.contents-wrapper{
-width: 1080px;
-margin: 0 auto;
-max-width: 100%;
-display: flex;
-}
 
 /* common */
 
@@ -159,46 +212,31 @@ border-bottom: 4px solid #1F91BE;
 width: 100%;
 margin-right: 20px;
 padding-bottom: 9px;
-margin-bottom: 10px;
 }
 
-h2 {
-font-size: 24px;
-color: #1F91BE;
-border-bottom: 4px solid #1F91BE;
-width: 300px;
-padding-bottom: 9px;
-margin-top: 40px;
-margin-bottom: 40px;
-}
+
 
 /*header部分*/
 
 .head{
 display: flex;
-justify-content: center;
+justify-content: space-between;
+align-items: center;
+height: 75px;
 width: 1080px;
-margin: auto;
+padding: 0;
 }
 
 .left {
 color: #1F91BE;
 font-size: 31px;
-margin: auto auto auto 0;
 }
 
-.nav ul{
-align-items: center;
-margin: 15px 0 15px auto;
-}
 
 .nav li{
 font: Bold 16px YuGothic;
 color: #333333;
-/* padding-top: 30px; */
-display: inline;
 padding-left: 34px;
-margin: 0;
 }
 
 .nav a{
@@ -209,16 +247,23 @@ text-decoration: none;
 color: #1F91BE;}
 
 
+/* 全体部分 */
+.contents-wrapper{
+width: 1080px;
+margin: 0 auto;
+max-width: 100%;
+display: flex;
+padding: 100px 0;
+}
+/* 全体部分 */
+
 /* article-wrapper */
-  
+
 .article-wrapper{
   width: 70%;
-  margin-top: 60px;
-  padding-right: 58px;
-  padding-left: 0;
-  margin-bottom: auto;
-
 }
+
+/* ABOUT部分 */
 
 .about-flex{
 display: flex;
@@ -229,22 +274,10 @@ width:320px;
 font-size: 16px;
 }
 
-p.tx{
-  margin-top: 30px;
-}
 
 .about{
   margin-right: 80px;
 }
-
-img.about1{
-  margin-top: 20px;
-}
-
-img.about2{
-  margin-top: 20px;
-}
-
 
 .about-container-left{
   width: 320px;
@@ -254,8 +287,7 @@ img.about2{
 .about-container-right{
   width: 320px;
 }
-
-
+/*/ABOUT部分 */
 
 /*NEWS部分*/
 
@@ -269,31 +301,22 @@ padding-bottom: 0;
 p.day{
 font-weight: bold;
 font-size: 14px;
-line-height: 14px;
-display: flex;
-margin:20px 0 20px 0;
 }
 
 .newstxt{
 font-size: 14px;
-line-height: 14px;
 flex-basis:555px;
-margin: 20px 0 20px 40px;
-display: inline;
-}
-
-p.day2{
-font-size: 14px;
-margin:20px 0 20px 0;
-
 }
 
 .newstxt2{
-font-size: 14px;
-flex-basis:555px;
-margin: 20px 0 20px 40px;
+  height: 38px;
 }
 
+/* NEWS部分 */
+
+/* /.article-wrapper */
+
+/* ボタン部分 */
 .btn{
 float:right;
 letter-spacing: 0;
@@ -311,41 +334,17 @@ background-color:#FFFFFF;
 border:2px solid #1F91BE;
 }
 
+/* /ボタン部分 */
+
+
+/* .side-wrapper */
 .side-wrapper{
   width: 30%;
-  margin: 0 auto;
-  margin-top: 70px;
-  margin-right: 100px;
 }
-
-img.imgside{
-  margin-top: 30px;
-}
-
-
 
 .category li{
   font-size: 16px;
   height: 16px;
-  margin-bottom: 15px;
-  margin-left: 6px;
 }
 
-/*footer部分 済*/
-
-footer {
-margin-top: 60px;
-width: 100%;
-height: 100%;
-background-color: #C7C7C7;
-}
-
-footer p {
-padding: 18px 0 18px 0;
-font: Bold 12px YuGothic;
-letter-spacing: 0;
-color: #FFFFFF;
-opacity: 1
-
-}
-}
+/* /side-wrapper */
