--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ p{
   height: 82px;
   align-items: flex-start;
   justify-content: space-evenly;
+  /* justify-content: center; */
   padding: 0 0 0 15px;
 }
 .left {
