--- a/css/responsive.css
+++ b/css/responsive.css
@@ -44,6 +44,15 @@ width: auto;
 /* /全体部分 */
 
 /* ABOUT部分 */
+
+h1{
+font-size: 32px;
+color: #1F91BE;
+border-bottom: 4px solid #1F91BE;
+width: 100%;
+padding-bottom: 9px;
+}
+
 .article-wrapper{
   width: 70%;
   padding-right: 80px;
@@ -58,9 +67,7 @@ font-size: 16px;
 p.tx{
   padding-top: 30px;
 }
-.about{
-  margin-right: 80px;
-}
+
 img.about1{
   padding-top: 30px;
 }
@@ -77,6 +84,7 @@ img.about2{
 }
 
 /* /ABOUT部分 */
+
 
 
 /*NEWS部分*/
@@ -110,6 +118,10 @@ padding: 20px 0 20px 49px;
 
 p.day2{
   line-height: 1.8;
+}
+
+p.day3{
+  padding-top: 30px;
 }
 
 .newstxt2{
@@ -196,52 +208,15 @@ opacity: 1
 
 
 
-
 @media (min-width:1080px)
 {
-
-/* common */
-
-h1{
-font-size: 32px;
-color: #1F91BE;
-border-bottom: 4px solid #1F91BE;
-width: 100%;
-margin-right: 20px;
-padding-bottom: 9px;
-}
-
-
 
 /*header部分*/
 
 .head{
-display: flex;
-justify-content: space-between;
-align-items: center;
-height: 75px;
 width: 1080px;
 padding: 0;
 }
-
-.left {
-color: #1F91BE;
-font-size: 31px;
-}
-
-.nav li{
-font: Bold 16px YuGothic;
-color: #333333;
-padding-left: 34px;
-}
-
-.nav a{
-color: #333333;
-text-decoration: none;
-}
-.nav a:hover{
-color: #1F91BE;}
-
 
 /* 全体部分 */
 .contents-wrapper{
@@ -260,18 +235,9 @@ padding: 100px 0;
 }
 
 /* ABOUT部分 */
-
-.about-flex{
-display: flex;
-}
-
 .tx{
 width:320px;
 font-size: 16px;
-}
-
-.about{
-  margin-right: 80px;
 }
 
 .about-container-left{
@@ -286,18 +252,6 @@ font-size: 16px;
 
 /*NEWS部分*/
 
-.calender{
-display: flex;
-border-bottom: 1px solid #6F6F6F;
-width: 700px;
-padding-bottom: 0;
-}
-
-p.day{
-font-weight: bold;
-font-size: 14px;
-}
-
 .newstxt{
 font-size: 14px;
 flex-basis:555px;
@@ -310,36 +264,3 @@ flex-basis:555px;
 /* NEWS部分 */
 
 /* /.article-wrapper */
-
-/* ボタン部分 */
-.btn{
-float:right;
-letter-spacing: 0;
-color: #1F91BE;
-width: 80px;
-font-size:16px;
-line-height: 16px;
-font-weight:bold;
-text-decoration:none;
-display:block;
-text-align:center;
-margin-top: 20px;
-padding: 7px 34px 7px 34px;
-background-color:#FFFFFF;
-border:2px solid #1F91BE;
-}
-
-/* /ボタン部分 */
-
-
-/* .side-wrapper */
-.side-wrapper{
-  width: 30%;
-}
-
-.category li{
-  font-size: 16px;
-  height: 16px;
-}
-
-/* /side-wrapper */
